--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "php": "^7.1",
     "firebase/php-jwt" : "^5.0",
     "php-http/message": "^1.8",
-    "php-http/guzzle6-adapter": "^2.0",
-    "php-http/curl-client": "^2.0"
+    "php-http/curl-client": "^2.0",
+    "psr/simple-cache": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7"
