--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
   "require": {
     "php": "^7.1",
     "firebase/php-jwt" : "^5.0",
-    "php-http/message": "^1.8",
-    "php-http/curl-client": "^2.0",
+    "guzzlehttp/guzzle": "~6.0",
     "psr/simple-cache": "^1.0"
   },
   "require-dev": {
